[package]
name = "lintrunner"
version = "0.12.7"
authors = ["Michael Suo <suo@fb.com>"]
edition = "2021"
description = "A lint running tool and framework."
license = "BSD-3-Clause"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
anyhow = "1.0.79"
glob = "0.3.1"
tempfile = "3.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
textwrap = { version = "0.15.2", features = ["terminal_size"] }
similar = { version = "2.4.0", features = ["inline"] }
console = "0.15.8"
toml = "0.5.11"
log = "0.4.20"
indicatif = "0.16.2"
regex = "1.10.3"
itertools = "0.10.5"
directories = "4.0.1"
blake3 = "1.5.0"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.33"
dialoguer = "0.10.4"
shell-words = "1.1.0"
figment = { version = "0.10", features = ["toml", "env"] }

[dev-dependencies]
assert_cmd = "2.0.13"
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
once_cell = "1.19.0"
