[build-system]
requires = ["maturin==1.9.3"]
build-backend = "maturin"

[project]
name = "lintrunner"
version = "0.12.7"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
repository = "https://github.com/suo/lintrunner"

[tool.maturin]
bindings = "bin"
